@@ -5,6 +5,8 @@ git-annex (0.20110321) UNRELEASED; urgency=low
     with git-annex 0.24 or earlier.) The code is believed to work on
     Linux, FreeBSD, and OSX; check compile-time messages to see if it
     is not enabled for your OS.
+  * Add annex.diskreserve config setting, to control how much free space
+    to reserve for other purposes and avoid using (defaults to 1 mb).
   * Add --fast flag, that can enable less expensive, but also less thurough
     versions of some commands.
   * fsck: In fast mode, avoid checking checksums.
